--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "antd": "^5.18.0",
+    "antd-jalali-moment": "^3.3.8",
     "axios": "^1.7.2",
+    "jalaali-react-date-picker": "^1.0.18",
     "jalali-moment": "^3.3.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
